@@ -10,9 +10,10 @@ import za.ac.readiculous.service.BookClubService;
 import za.ac.readiculous.service.UserService;
 import za.ac.readiculous.util.BookClubDTO;
 
-
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
+
 @RestController
 @RequestMapping("/book-club")
 @CrossOrigin(origins = "http://localhost:5173")
@@ -27,21 +28,64 @@ public class BookClubController {
         this.userService = userService;
     }
 
+    /**
+     * Create a new BookClub
+     */
     @PostMapping("/create")
-    public ResponseEntity<BookClubDTO> createClub(@RequestBody BookClubDTO dto) {
-        User user = userService.read(dto.getOwnerId());
-        if (user == null) return ResponseEntity.badRequest().build();
+    public ResponseEntity<?> createClub(@RequestBody BookClubDTO dto) {
 
-        BookClub club = BookClubFactory.createBookClub(dto.getClubName(), dto.getClubDescription(), LocalDateTime.now(), user);
+        // Validate ownerId
+        if (dto.getOwnerId() == null) {
+            return ResponseEntity.badRequest().body("Owner ID is required");
+        }
+
+        // Get owner user
+        User owner = userService.read(dto.getOwnerId());
+        if (owner == null) {
+            return ResponseEntity.badRequest()
+                    .body("User not found for ID: " + dto.getOwnerId());
+        }
+
+        // Create BookClub using factory
+        BookClub club = BookClubFactory.createBookClub(
+                dto.getClubName(),
+                dto.getClubDescription(),
+                LocalDateTime.now(),
+                owner
+        );
+
+        if (club == null) {
+            return ResponseEntity.badRequest().body("Invalid book club data");
+        }
+
+        // Save club
         BookClub created = bookClubService.create(club);
 
-        return ResponseEntity.ok(new BookClubDTO(created.getClubId(), created.getClubName(), created.getClubDescription(), created.getOwner().getUserId()));
+        // Prepare response DTO
+        BookClubDTO responseDto = new BookClubDTO(
+                created.getClubId(),
+                created.getClubName(),
+                created.getClubDescription(),
+                created.getOwner() != null ? created.getOwner().getUserId() : null
+        );
+
+        return ResponseEntity.ok(responseDto);
     }
 
+    /**
+     * Get all BookClubs
+     */
     @GetMapping("/all")
-    public List<BookClubDTO> getAllClubs() {
-        return bookClubService.getAll().stream()
-                .map(c -> new BookClubDTO(c.getClubId(), c.getClubName(), c.getClubDescription(), c.getOwner().getUserId()))
-                .toList();
+    public ResponseEntity<List<BookClubDTO>> getAllClubs() {
+        List<BookClubDTO> clubs = bookClubService.getAll().stream()
+                .map(c -> new BookClubDTO(
+                        c.getClubId(),
+                        c.getClubName(),
+                        c.getClubDescription(),
+                        c.getOwner() != null ? c.getOwner().getUserId() : null
+                ))
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(clubs);
     }
 }
